--- a/static/mixins/mixins.scss
+++ b/static/mixins/mixins.scss
@@ -17,7 +17,7 @@
   $currentSelector: "";
 
   @each $unit in $modifier {
-    $currentSelector: #{$currentSelector + & + $modifier-separator + $unit + ','};
+    $currentSelector: #{$currentSelector + & + $modifier-separator + $unit + ","};
   }
 
   @at-root {
